# cpu6502

./: .gitignore  Cargo.toml  README.md
.nvim/: nvim-dap.lua
cpu6502/: Cargo.toml
cpu6502/src/: consts.rs  cpu.rs  machine.rs  memory.rs
cpu6502/src/cpu/: instructions.rs  opcodes.rs  processor_status.rs  tests.rs
cpu6502/src/cpu/instructions/: arithmetic.rs  branches.rs  inc_and_decrements.rs  jumps_and_calls.rs  load_and_store_ops.rs  logical.rs  register_transfers.rs  shifts.rs  stack_operations.rs  status_flag_changes.rs  system_functions.rs  tests.rs
cpu6502/tests/: to_lower_test.rs
src/: consts.rs  cpu.rs  lib.rs  main.rs  memory.rs
src/cpu/: addessing.rs  addressing.rs  debugger.rs  instructions.rs  opcodes.rs  processor_status.rs  tasks.rs  tests.rs  th_tests.rs  utils.rs
src/cpu/addressing/: absolute.rs  address.rs  immediate.rs  indirect.rs  zero_page.rs
src/cpu/debugger/: debug_instruction_info.rs  registers.rs
src/cpu/instructions/: arithmetic.rs  branches.rs  inc_and_decrements.rs  jumps_and_calls.rs  load_and_store_ops.rs  logical.rs  register_transfers.rs  shifts.rs  stack_operations.rs  status_flag_changes.rs  system_functions.rs
src/cpu/instructions/arithmetic/: tests.rs
src/cpu/instructions/branches/: tests.rs
src/cpu/instructions/inc_and_decrements/: tests.rs
src/cpu/instructions/jumps_and_calls/: tests.rs
src/cpu/instructions/load_and_store_ops/: tests.rs
src/cpu/instructions/logical/: tests.rs
src/cpu/tasks/: modify_memory.rs  modify_register.rs  read_memory.rs  transfer_register.rs
tests/: to_lower_test.rs
(+24 files in other folders)
