[package]
name = "cpu6502"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.13.1", features = ["macros"] }
ringbuffer = "0.15.0"

[[test]]
name = "to_lower_test"
path = "tests/to_lower_test.rs"
