[package]
name = "cpu6502"
version = "0.1.19"
edition = "2024"

[dependencies]
paste = "1.0.15"
phf = { version = "0.13.1", features = ["macros"] }
ringbuffer = "0.15.0"
strum = { version = "0.27.2", features = ["derive"] }

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

